--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
   "bugs": {
     "url": "https://github.com/ulfbiallas/npm-mlp/issues"
   },
+  "license": "MIT",
   "licenses": [
     {
       "type": "MIT"
     }
   ],
   "devDependencies": {
-    "chai": "^2.1.1",
+    "chai": "^3.0.0",
     "mocha": "^2.1.0",
     "sinon": "^1.13.0"
   }
